# bfirs

./: Cargo.toml  Makefile  README.md
src/: compiler.rs  interpreter.rs  ir.rs  main.rs  minibit.rs  nonblocking.rs  state.rs  stupid.rs
