[package]
name = "bfirs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
strip = "symbols"

[dependencies]
thiserror = "1.0"
strum = "0.24"
strum_macros = "0.24"
argh = "0.1"
usize_cast = "1.1.0"
either = "1.10.0"
clap = { version = "4.5.1", features = ["derive"] }


