[package]
name = "bf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
strip = "symbols"

[dependencies]
thiserror = "1.0"
strum = "0.26"
strum_macros = "0.26"
usize_cast = "1.1.0"
either = "1.10.0"
clap = { version = "4.5.1", features = ["derive"] }
clap_complete = "4.5.1"
bytecount = "0.6.9"
memmap2 = "0.9.8"
